fix(styles): font size too small on mobile

--- a/styles/themes/default/utilities.css
+++ b/styles/themes/default/utilities.css
@@ -40,7 +40,7 @@
 
   /* ---------- Tag */
   .tag-regular {
-    @apply text-[0.5625rem] leading-[1.4] uppercase;
+    @apply text-xs uppercase;
   }
 
   .tag-bold {
